--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-mesa>=2.4.0
-networkx>=3.0
+mesa==2.4.0
 simpy>=4.0.0
 numpy>=1.20.0
 pandas>=1.3.0
 tornado>=6.1
+networkx>=2.6
 matplotlib>=3.5.0
+jinja2>=3.0
